--- a/vignettes/aicsPaper.Rmd
+++ b/vignettes/aicsPaper.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Accurate Inference of Genetic Ancestry from Cancer Sequencing"
+title: "Accurate Inference of Genetic Ancestry from Cancer-derived Sequences"
 author: Pascal Belleau, Astrid Deschênes and Alexander Krasnitz
 output:
     BiocStyle::html_document:
